--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="coder">
-        <p>create by <a href="https://github.com/qew4476">@State-yang</a></p>
+        <p>create by <a href="https://github.com/qew4476">@Shane-yang</a></p>
 
 
 
